styled navbar links

--- a/client/components/elements/navbar.module.css
+++ b/client/components/elements/navbar.module.css
@@ -6,3 +6,9 @@
     display: flex ;
     align-items: center;
 }
+
+.linksContainer {
+	display: flex;
+	align-items: center;
+	margin-left: 54px; 
+}
