--- a/client/components/reusables/reusable.module.css
+++ b/client/components/reusables/reusable.module.css
@@ -31,8 +31,38 @@
 	width: 40px ;
 }
 .active {
-	font-weight: 800 ;
+	font-weight: 700 ;
 }
 .active::after {
 	width: 40px ;
+}
+
+.button {
+	padding: 12px 25px;
+	border-radius: 21px;
+	border: none;
+	cursor: pointer;
+	margin-right: 5px ;
+	font-size: 16px;
+	font-weight: 600 ;
+	transition: .25s ease-out ;
+}
+
+.button_dark {
+	background: #000000;
+	color: white;
+	border: 1px solid black ;
+}
+
+.button_dark:hover {
+	background-color: white;
+	color: black ;
+}
+.button_light {
+	color: #000000;
+	background-color: white;
+	border: 1px solid white ;
+}
+.button_light:hover {
+	border-color: black 
 }
