--- a/client/components/elements/navbar.module.css
+++ b/client/components/elements/navbar.module.css
@@ -22,7 +22,12 @@
         top: 0 ;
         right: 0 ;
         bottom: 0 ;
-        background-color: red ;
-        transform: translateX(100%);
+        background-color: black ;
+        color: white ;
+        flex-direction: column;
+        align-items: flex-start;
+        padding-top: 40px;
+        box-shadow: 5px 0px 30px black;
+        /*transform: translateX(100%);*/
     }
 }
