finish navbar responsiveness

--- a/client/components/elements/navbar.module.css
+++ b/client/components/elements/navbar.module.css
@@ -26,8 +26,36 @@
         color: white ;
         flex-direction: column;
         align-items: flex-start;
-        padding-top: 40px;
-        box-shadow: 5px 0px 30px black;
-        /*transform: translateX(100%);*/
+        padding-top: 16vh;
+        transform: translateX(100%);
+        transition: transform .3s ease-out;
+        width: 250px;
+    }
+    .linksContainer > a {
+        transform: translateX(250px);
+        transition: transform .3s ease-out;
+    }
+    
+    .linksContainer.open {
+        transform: translateX(0);
+        box-shadow: -100vw 2px 100vw 100vw rgba(0,0,0,0.75);
+    }
+    .linksContainer.open > a:nth-child(1) {
+        transition-delay: .2s ;
+    } 
+    .linksContainer.open > a:nth-child(2) {
+        transition-delay: .3s ;
+    } 
+    .linksContainer.open > a:nth-child(3) {
+        transition-delay: .4s ;
+    } 
+    .linksContainer.open > a {
+        transform: translateX(0);
+    }
+}
+
+@media screen and (max-width: 570px) {
+    .buttonsContainer {
+        display: none ;
     }
 }
