--- a/client/components/layout.module.css
+++ b/client/components/layout.module.css
@@ -1,5 +1,6 @@
 .wrapper {
     position: relative;
     min-height: 100vh;
-    overflow-y: hidden;
+    width: 100vw ;
+    overflow-x: hidden;
 }
