--- a/client/components/reusables/hamburger.module.css
+++ b/client/components/reusables/hamburger.module.css
@@ -1,50 +1,110 @@
-.menu {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 40px;
-    height: 40px;
-    position: relative;
-    cursor: pointer;
-  }
-  
+.hamburger {
+  width: 60px;
+  height: 45px;
+  position: relative;
+  margin: 0px 10px 0 20px ;
+  -webkit-transform: scale(.8);
+  -moz-transform: scale(.8);
+  -o-transform: scale(.8);
+  transform: scale(.8);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+  background-color: transparent;
+  border: none ;
+  z-index: 999 ;
+  display: none ;
+}
+
+.hamburger span {
+  display: block;
+  position: absolute;
+  height: 3px;
+  width: 50%;
+  background-color: black ;
+  opacity: 1;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+.hamburger.open span {
+  background-color: white ;
+}
+.hamburger span:nth-child(even) {
+  left: 50%;
+  border-radius: 0 9px 9px 0;
+}
+
+.hamburger span:nth-child(odd) {
+  left:0px;
+  border-radius: 9px 0 0 9px;
+}
+
+.hamburger span:nth-child(1), .hamburger span:nth-child(2) {
+  top: 0px;
+}
+
+.hamburger span:nth-child(3), .hamburger span:nth-child(4) {
+  top: 18px;
+}
+
+.hamburger span:nth-child(5), .hamburger span:nth-child(6) {
+  top: 36px;
+}
+
+.hamburger.open span:nth-child(1),.hamburger.open span:nth-child(6) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.hamburger.open span:nth-child(2),.hamburger.open span:nth-child(5) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+.hamburger.open span:nth-child(1) {
+  left: 5px;
+  top: 7px;
+}
+
+.hamburger.open span:nth-child(2) {
+  left: calc(50% - 5px);
+  top: 7px;
+}
+
+.hamburger.open span:nth-child(3) {
+  left: -50%;
+  opacity: 0;
+}
+
+.hamburger.open span:nth-child(4) {
+  left: 100%;
+  opacity: 0;
+}
+
+.hamburger.open span:nth-child(5) {
+  left: 5px;
+  top: 29px;
+}
+
+.hamburger.open span:nth-child(6) {
+  left: calc(50% - 5px);
+  top: 29px;
+}
+
+@media screen and (max-width: 1050px) {
   .hamburger {
-    width: 25px;
-    height: 3px;
-    background-color: #fff;
-    border-radius: 10px;
-    position: absolute;
-    transition: all 0.3s ease;
+    display: block;
   }
-  
-  .hamburger::before,
-  .hamburger::after {
-    content: "";
-    width: 25px;
-    height: 3px;
-    background-color: #fff;
-    border-radius: 10px;
-    position: absolute;
-    transition: all 0.3s ease;
-  }
-  
-  .hamburger::before {
-    transform: translateY(-8px);
-  }
-  
-  .hamburger::after {
-    transform: translateY(8px);
-  }
-  
-  .menu.open .hamburger {
-    transform: rotate(45deg);
-  }
-  
-  .menu-btn.open .menu-btn__burger::before {
-    transform: rotate(-90deg) translateX(-3px);
-    opacity: 0;
-  }
-  
-  .menu-btn.open .menu-btn__burger::after {
-    transform: rotate(90deg) translateX(3px);
-  }
+}
