--- a/client/components/elements/footer.module.css
+++ b/client/components/elements/footer.module.css
@@ -1,14 +1,23 @@
 .footerContainer {
     background-color: black ;
     color: white ; 
-    display: flex;
+    display: grid;
     padding-left: var(--paddingX);
     padding-right: var(--paddingX);
     padding-top: 10vh ;
     padding-bottom: 4vh ;
+    grid-auto-flow: column;
+    column-gap: 10vw;
+    font-family: 'Inter';
+    /* just for testing */
+
+    position: absolute;
+    bottom: 0 ;
+    width: 100vw ;
 }
 
-.leftFooter {
+
+.leftFooter, .rightFooter {
     display: flex ;
     flex-direction: column;
     align-items: flex-start;
@@ -19,4 +28,16 @@
 
 .leftFooter > p:last-child {
     justify-self: flex-end;
+    font-weight: 300 ;
+    font-size: 13px;
+    display: block;
+    margin-top: auto ;
+}
+
+.footerHelp {
+    margin: 40px 0 ;
+}
+.footerHelp > p {
+    margin: 7px 0;
+    font-weight: 600;
 }
